<resources>
    <string name="app_name">MedISystem</string>
    <string name="app_name_login">MedISystem</string>
    <string name="txtIDHint">Username</string>
    <string name="txtPassHint">Password</string>
    <string name="btnNameLogin">LOGIN</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_product">Add Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="about">MORE</string>
    <string name="logout">Logout</string>
    <string name="medisystem">MedISystem</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="take">Take</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="manufacture_name">Manufacture Name</string>
    <string name="date_of_expiration">Date of Expiration</string>
    <string name="date_of_manufacture">Date of Manufacture</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="stock">Stock</string>
    <string name="generic_name">Generic Name</string>
    <string name="product_idss">Product ID</string>
</resources>