<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_add"
            android:title="@string/add_product"
            android:icon="@drawable/add_product"/>

        <item
            android:id="@+id/nav_rem"
            android:title="@string/remove_product"
            android:icon="@drawable/remove_product"/>

        <item
            android:id="@+id/nav_edit"
            android:title="@string/edit_product"
            android:icon="@drawable/edit_product"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/about_icon"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>

    </group>

</menu>