<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Dashboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#dfe6e9">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/medisystem"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo"
                android:minHeight="48dp"
                app:srcCompat="@drawable/logout_icon" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        app:boxBackgroundColor="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="5dp"
            android:hint=""
            android:minHeight="55dp"
            android:selectAllOnFocus="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="32dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnRemove"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnAdd"
                app:layout_constraintTop_toTopOf="@+id/btnAdd" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="@+id/btnAbout"
                app:layout_constraintEnd_toStartOf="@+id/btnAbout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnRemove"
                app:layout_constraintTop_toTopOf="@+id/btnAbout" />

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="32dp"
                android:text="@string/about"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEdit" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

